P0-TSK-013: time is injected, never read from the environment
Two ArchUnit rules. noAmbientTimeIsRead forbids the zero-argument now()
methods, System.currentTimeMillis/nanoTime and new Date() everywhere with
no exemption: these have no seam and cannot be substituted.
onlyTheCompositionRootBuildsASystemClock permits Clock.systemUTC() in app
alone, because a system clock must be built somewhere or nothing can be
injected, and anywhere else it is ambient time with an abstraction wrapped
round it.

Instant.now(clock) and LocalDate.now(clock) are deliberately allowed. A
rule that forbade the clock-taking overloads would push people off the
correct API, which is how a well-meant rule makes a codebase worse.

The rules found one production violation immediately, written in the
previous task: IdGenerator.systemDefault() called Clock.systemUTC(). It is
removed rather than exempted - the shared kernel does not decide where
time comes from, and a convenience factory reading ambient time is exactly
the seam through which ambient time re-enters a codebase that decided
against it. The composition root supplies clock and randomness.

TestClock replaces the MutableClock that was inline in IdGeneratorTest.
rewind() is a named operation because NTP correction and leap smearing
move real clocks backwards and financial components must survive it.

SystemClockProbe declares package com.finapp.ledger while living in app's
test sources: the module-scoped rule derives the module from the package,
so a fixture in com.finapp.app.architecture could never demonstrate it -
the rule is right to permit the composition root. Asserting a
differently-configured copy of the condition would test something other
than the rule that runs.

DOMAIN_MODEL.md gains the posting date / value date / system time
distinction the task asks for. Posting and value dates are inputs to a
domain operation, never clock reads; no rule can catch that substitution,
which is why it is written down.

No new ADR: ADR-0006 alr